Add config protocolParameters

--- a/config.example.json
+++ b/config.example.json
@@ -4,6 +4,7 @@
   "coreApi": "http://localhost:3000",
   "coreSocketPath": "~/cardano-my-node/db/socket",
   "shelleyGenesis": "~/cardano-my-node/testnet-shelley-genesis.json",
+  "protocolParametersPath":"~/cardano-my-node/parameters.json",
   "networkMagic": "testnet-magic 2",
   "poolData": {
     "poolPledgeAda": 10000,
